# radiance_teleoperation_project

Radiance Fields for Robotic Teleoperation/: 1.md  2.md  CONTRIBUTING.md  LICENSE  README.md  requirements.txt
Radiance Fields for Robotic Teleoperation/radiance_teleoperation_project/: INSTALLATION.md  README.md  USER_MANUAL.md
Radiance Fields for Robotic Teleoperation/radiance_teleoperation_project/config/: camera_config.yaml
Radiance Fields for Robotic Teleoperation/radiance_teleoperation_project/docs/: 01_프로젝트_개요.md  02_Phase1_환경설정.md  03_Phase2_데이터파이프라인.md  04_Phase3_Radiance_Fields.md  05_Phase4_VR_시각화.md  06_Phase5-7_완성.md  cursor_대화내용.md
Radiance Fields for Robotic Teleoperation/radiance_teleoperation_project/scripts/: setup_environment.sh
Radiance Fields for Robotic Teleoperation/radiance_teleoperation_project/src/radiance_camera/: CMakeLists.txt  package.xml  setup.py
Radiance Fields for Robotic Teleoperation/radiance_teleoperation_project/src/radiance_camera/launch/: multi_camera.launch.py
Radiance Fields for Robotic Teleoperation/radiance_teleoperation_project/src/radiance_camera/radiance_camera/: __init__.py
Radiance Fields for Robotic Teleoperation/radiance_teleoperation_project/src/radiance_camera/resource/: radiance_camera
Radiance Fields for Robotic Teleoperation/radiance_teleoperation_project/src/radiance_camera/scripts/: multi_camera_node.py
Radiance Fields for Robotic Teleoperation/radiance_teleoperation_project/src/radiance_camera/src/: image_preprocessor.py  multi_camera_node.py
(+6 files in other folders)
